# synth

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  run-all-checks.sh
.github/workflows/: build-test.yml  release.yml  sanitize.yml
Source/: AppInfo.h  FactoryPresets.h  MidiLearnManager.h  MidiProfile.h  ModDestRegistry.h  ModifierLearnManager.h  Parameters.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PresetManager.h  QwertyKeyboard.h  SampleStore.h  VersionInfo.h.in
Source/DSP/: ADSREnvelope.h  Arpeggiator.h  AudioLoop.h  ChordEngine.h  Chorus.h  FXChain.h  Kit.h  LFO.h  Looper.h  MidiClock.h  ModMatrix.h  ParametricEQ.h  PartEQ.h  PolyBlepOscillator.h  Reverb.h  SVFilter.h  SampleVoice.h  SoftClip.h  StepSequencer.h  StereoWidth.h  SynthEngine.h  SynthVoice.h  Wavetable.h
Source/Observability/: AudioHealthLogger.cpp  AudioHealthLogger.h  DebugOverlay.h  RtLogRing.h
Source/Standalone/: AudioDeviceCuration.h  VASynthStandaloneApp.cpp
Source/UI/: BottomZones.h  ChordPanel.h  EQPanel.h  FXPanel.h  HelpOverlay.h  InputsDialog.h  KitEditor.h  MacroStrip.h  ModAnim.h  ModLink.h  ModMatrixPanel.h  OutputsDialog.h  PanelChrome.h  PartRail.h  PartsStrip.h  ScopeView.h  Sections.h  SeqPanel.h  TopBar.h  UiText.h  VASynthLookAndFeel.h  Widgets.h
cmake/: gen_version.cmake
docs/: gap-analysis.md  midi.md  musicality-pass.md  phase8-status.md  presets.md  roadmap-1.0.md
docs/plans/: 95-wavetable.md
resources/midi-profiles/: korg_b2.json  launchkey_mini.json
resources/presets/: 01_fat_saw_bass.json  02_deep_sub.json  03_reese_bass.json  04_bright_lead.json  05_square_lead.json  06_e_piano.json  07_digital_bell.json  08_warm_pad.json  09_glass_pad.json  10_synth_pluck.json  11_analog_brass.json  12_string_machine.json  13_soft_flute.json  14_full_organ.json  15_noise_riser.json  16_dark_drone.json  17_kick_808.json  18_kick_punchy.json  19_snare.json  20_hat_closed.json  21_hat_open.json  22_tom.json
tests/: CMakeLists.txt  README.md  dsp_smoke_test.cpp  lsan.supp
tests/bench/: bench_engine.cpp
tests/dsp/: alloc_hook.cpp  alloc_hook.h  test_arp.cpp  test_audioloop.cpp  test_chord.cpp  test_clock_align.cpp  test_engine.cpp  test_envelope.cpp  test_eq.cpp  test_filter.cpp  test_fx.cpp  test_fx_golden.cpp  test_golden.cpp  test_kit.cpp  test_lfo.cpp  test_lfo_sync.cpp  test_looper.cpp  test_midi_clock.cpp  test_modmatrix.cpp  test_mono_glide.cpp  test_multitimbral.cpp  test_musicality.cpp  test_osc6a.cpp  test_oscillator.cpp  test_rt_safety.cpp  test_rtlogring.cpp  test_sample_voice.cpp  test_smoke.cpp  test_smoothing.cpp  test_softclip.cpp  test_stepseq.cpp  test_util.h  test_velocity.cpp  test_voice_steal.cpp  test_wavetable.cpp
tests/plugin/: test_arp_ui.cpp  test_audio_device.cpp  test_chord_plugin.cpp  test_click_torture.cpp  test_clock_out.cpp  test_default_scene.cpp  test_device_curation.cpp  test_drums.cpp  test_editfocus.cpp  test_editor.cpp  test_eq_kit.cpp  test_eq_mockup.cpp  test_eq_panel.cpp  test_fx_plugin.cpp  test_fx_topology.cpp  test_health_logger.cpp  test_input_reliability.cpp  test_kick_clean.cpp  test_kit_edit.cpp  test_layout_mockup.cpp  test_link_sweep.cpp  test_load_isolation.cpp  test_looper_focus.cpp  test_looper_lengths.cpp  test_looper_stuck.cpp  test_macros.cpp  test_midi_hotplug.cpp  test_midi_learn.cpp  test_midi_profile.cpp  test_migration.cpp  test_modanim.cpp  test_modmatrix.cpp  test_output_bounds.cpp  test_pad_surface.cpp  test_parts.cpp  test_performance_midi.cpp  test_perpart_mono.cpp  test_preset_velocity.cpp  test_presets.cpp  test_presets_factory.cpp  (+18 more)
tests/soak/: soak_main.cpp
tools/thinkpad-validate/: .gitignore  BUNDLE_INFO  README.md  assemble.sh  soak_harness.cpp  validate.sh
tools/thinkpad-validate/bench/: bench_engine.cpp
tools/thinkpad-validate/dsp/: ADSREnvelope.h  Chorus.h  FXChain.h  LFO.h  PolyBlepOscillator.h  Reverb.h  StereoDelay.h  StereoWidth.h  SynthEngine.h  SynthVoice.h
